--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -326,8 +326,30 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                .container-project-image-expanded {
+                    position: fixed;
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%, -50%);
+                    background-color: white;
+                    visibility: visible;
+                    height: 100vh;
+                    width: 100vw;
+                    .project-image-expanded {
+                        position: fixed;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%, -50%);
+                        z-index: 999;
+                        width: auto;
+                        height: 90%;
+                        object-fit: cover;
+                        overflow: hidden;
+                        visibility: visible;
+                    }
+                }
                 .c {
-                    position: relative;
+                    position: absolute;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
