--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -435,6 +435,7 @@
                             overflow-y: scroll;
                             padding-left: 2rem;;
                             padding-right: 2rem;
+                            text-align: left;
                         }
                     }
                     .flip-back-button-container {
