--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -387,6 +387,11 @@
                         width: auto;
                         max-width: 100%;
                     }
+                    #work-in-progress {
+                        height: auto;
+                        width: 90%;
+                        margin-bottom: 4rem;   
+                    }
                     .learn-more-button-container {
                         position: relative;
                         height: 16%;
